Añado ReservationsController 2.0